testcrate/tests/ui/delete.stderr
warning: delete() without filters
  --> $DIR/delete.rs:55:16
   |
55 |     sql!(Table.delete());
   |                ^^^^^^

error[E0308]: mismatched types
  --> $DIR/delete.rs:49:33
   |
49 |     sql!(Table.filter(field1 == 42).delete());
   |                                 ^^
   |                                 |
   |                                 expected struct `std::string::String`, found integral variable
   |                                 help: try using a conversion method: `42.to_string()`
   |
   = note: expected type `std::string::String`
              found type `{integer}`

error: aborting due to previous error

